--- a/app/src/main/res/drawable/game_quiz_correct.xml
+++ b/app/src/main/res/drawable/game_quiz_correct.xml
@@ -8,15 +8,9 @@
         android:radius="30dp"
         />
 
-    <gradient
-        android:startColor="@color/green"
-        android:centerColor="@color/green"
-        android:endColor="@color/green"
-        />
-
     <stroke
-        android:width="1dp"
-        android:color="@color/black"
+        android:width="2dp"
+        android:color="@color/green"
         />
 
 </shape>
