--- a/app/src/main/res/drawable/game_quiz_options.xml
+++ b/app/src/main/res/drawable/game_quiz_options.xml
@@ -8,15 +8,9 @@
         android:radius="30dp"
         />
 
-    <gradient
-        android:startColor="@color/blue"
-        android:centerColor="@color/blue"
-        android:endColor="@color/blue"
-        />
-
     <stroke
-        android:width="1dp"
-        android:color="@color/black"
+        android:width="0.5dp"
+        android:color="@color/white"
         />
 
 </shape>
