--- a/app/src/main/res/drawable/game_quiz_wrong.xml
+++ b/app/src/main/res/drawable/game_quiz_wrong.xml
@@ -8,15 +8,9 @@
         android:radius="30dp"
         />
 
-    <gradient
-        android:startColor="@color/red"
-        android:centerColor="@color/red"
-        android:endColor="@color/red"
-        />
-
     <stroke
-        android:width="1dp"
-        android:color="@color/black"
+        android:width="2dp"
+        android:color="@color/red"
         />
 
 </shape>
