--- a/app/src/main/res/layout/activity_score_board.xml
+++ b/app/src/main/res/layout/activity_score_board.xml
@@ -10,15 +10,56 @@
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2.5"
+            android:layout_weight="2"
             android:background="#90282727"
-            android:gravity="center"
     >
-        <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+
+        <ImageView
+                android:id="@+id/imgViewBack"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/arrow"
+                android:layout_margin="20dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
         />
 
+        <TextView
+                android:id="@+id/txtCoins"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txtName"
+                android:layout_margin="20dp"
+                android:text="20 Credits"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textColor="#8d9400"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+        />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imgViewProfile"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/profile1"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+        />
+
+        <TextView
+                android:id="@+id/txtName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="100dp"
+                android:layout_below="@+id/imgViewProfile"
+                android:layout_marginTop="15dp"
+                android:layout_centerHorizontal="true"
+                android:text="user235"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textStyle="bold"
+        />
     </RelativeLayout>
 
 
@@ -37,13 +78,11 @@
                 android:orientation="horizontal"
                 android:background="@color/black"
         >
-            <android.support.v7.widget.CardView
+            <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
-                    app:cardBackgroundColor="#90383737"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="5dp"
+                    android:background="@drawable/scoreboard_green"
             >
                 <LinearLayout
                         android:layout_width="match_parent"
@@ -55,8 +94,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Correct"
-                            android:textColor="@color/white"
+                            android:textColor="@color/green"
                             android:layout_alignParentLeft="true"
+                            android:textStyle="bold"
                     />
                     <TextView
                             android:id="@+id/txtCorrect"
@@ -64,26 +104,25 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
                             android:layout_alignParentRight="true"
-                            android:text="20"
+                            android:text="10"
+                            android:textSize="16sp"
                             android:textColor="@color/white"
                     />
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </RelativeLayout>
 
-            <android.support.v7.widget.CardView
+            <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:layout_marginLeft="10dp"
-                    app:cardBackgroundColor="#90383737"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="5dp"
+                    android:background="@drawable/scoreboard_green"
             >
                 <LinearLayout
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:orientation="vertical"
                         android:gravity="center"
                 >
@@ -91,8 +130,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Wrong"
-                            android:textColor="@color/white"
+                            android:textColor="@color/red"
                             android:layout_alignParentLeft="true"
+                            android:textStyle="bold"
                     />
                     <TextView
                             android:id="@+id/txtWrong"
@@ -100,26 +140,25 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
                             android:layout_alignParentRight="true"
-                            android:text="20"
+                            android:text="0"
+                            android:textSize="16sp"
                             android:textColor="@color/white"
                     />
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </RelativeLayout>
 
-            <android.support.v7.widget.CardView
+            <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="100dp"
-                    android:layout_weight="1"
                     android:layout_marginLeft="10dp"
-                    app:cardBackgroundColor="#90383737"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="5dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/scoreboard_green"
             >
                 <LinearLayout
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:orientation="vertical"
                         android:gravity="center"
                 >
@@ -127,8 +166,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Skipped"
-                            android:textColor="@color/white"
+                            android:textColor="@color/darkBlue"
                             android:layout_alignParentLeft="true"
+                            android:textStyle="bold"
                     />
                     <TextView
                             android:id="@+id/txtSkipped"
@@ -136,13 +176,14 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
                             android:layout_alignParentRight="true"
-                            android:text="20"
+                            android:text="0"
+                            android:textSize="16sp"
                             android:textColor="@color/white"
                     />
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </RelativeLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -170,9 +211,10 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
                             android:text="Accuracy"
-                            android:textColor="@color/white"
+                            android:textColor="#90ffffff"
                             android:layout_alignParentLeft="true"
                             android:gravity="center_vertical"
+                            android:textStyle="bold"
                     />
                     <TextView
                             android:id="@+id/txtAccuracy"
@@ -180,7 +222,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginRight="20dp"
                             android:layout_alignParentRight="true"
-                            android:text="20"
+                            android:text="0"
                             android:textColor="@color/white"
                             android:gravity="center_vertical"
                     />
@@ -207,10 +249,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
-                            android:text="Accuracy"
-                            android:textColor="@color/white"
+                            android:text="Speed"
+                            android:textColor="#90ffffff"
                             android:layout_alignParentLeft="true"
                             android:gravity="center_vertical"
+                            android:textStyle="bold"
                     />
                     <TextView
                             android:id="@+id/txtSpeed"
@@ -218,7 +261,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginRight="20dp"
                             android:layout_alignParentRight="true"
-                            android:text="Speed : 200+ Q/hr"
+                            android:text="200+ Q/hr"
                             android:textColor="@color/white"
                             android:gravity="center_vertical"
                     />
