--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,31 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_splash_screen"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/tool_bar_bg"
+                android:id="@+id/activity_splash_screen"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/black"
 >
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/home_bg" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/home_bg"
+            android:visibility="gone"
+    />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:visibility="gone"
+    >
 
         <ImageView
-            android:id="@+id/imgView"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:src="@drawable/quizrrr"
-            android:transitionName="homeQuizzr"
-            />
+                android:id="@+id/imgView"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@drawable/quizrrr"
+                android:transitionName="homeQuizzr"
+        />
 
     </LinearLayout>
+
+    <TextView
+            android:id="@+id/txtViewTitle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="INFINITY QUIZ"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="26dp"
+            android:textStyle="normal"
+            android:paddingBottom="50dp"
+    />
+
 
 </RelativeLayout>
