--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,14 +14,18 @@
     <color name="white_light">#bebdbd</color>
 
     <color name="blue">#2821a6</color>
+    <color name="blue_lite">#4941e1</color>
     <color name="blue_light">#7c61dd</color>
-    <color name="darkBlue">#070353</color>
+    <color name="darkBlue">#3e21b4</color>
 
     <color name="purple">#9e026a</color>
 
-    <color name="red">#c20104</color>
-    <color name="green">#088643</color>
+    <color name="red">#bc0205</color>
+    <color name="red_light">#90fccacb</color>
+    <color name="green">#0d6c3a</color>
+    <color name="green_light">#90a5f5cb</color>
     <color name="golden">#b7ab39</color>
+    <color name="grey">#e2e2e2</color>
 
     <color name="black_overlay">#66000000</color>
 
