--- a/app/src/main/res/layout/activity_game_quiz.xml
+++ b/app/src/main/res/layout/activity_game_quiz.xml
@@ -19,23 +19,23 @@
     >
 
         <RelativeLayout
+                android:id="@+id/layoutTop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
         >
 
             <RelativeLayout
                     android:id="@+id/layoutShare"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_margin="10dp"
                     android:src="@drawable/optionss"
                     android:onClick="profileOptionClick"
                     android:background="@drawable/pop_option1"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
                     android:layout_centerVertical="true"
-                    android:alpha="0.4"
+                    android:alpha="0.2"
             >
                 <ImageView
                         android:layout_width="match_parent"
@@ -52,19 +52,20 @@
                 <!--android:layout_alignParentRight="true" />-->
 
                 <RelativeLayout
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         android:src="@drawable/optionss"
                         android:background="@drawable/pop_option1"
                         android:gravity="center"
                         android:layout_centerVertical="true"
+                        android:layout_margin="10dp"
                 >
                     <TextView
                             android:id="@+id/txtViewCoins"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
-                            android:text="120"
+                            android:text=""
                             android:textColor="@color/golden"
                             android:textSize="14sp"
                             android:textStyle="bold"
@@ -99,7 +100,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:text="#0"
+                        android:text=""
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold"
