--- a/app/src/main/res/layout/game_options_layout.xml
+++ b/app/src/main/res/layout/game_options_layout.xml
@@ -31,6 +31,7 @@
             android:onClick="soundOptionClick"
             android:background="@drawable/pop_option1"
             android:layout_marginBottom="5dp"
+            android:alpha="0.5"
     >
         <ImageView
                 android:id="@+id/imgSound"
@@ -55,6 +56,7 @@
             android:layout_marginBottom="5dp"
             android:onClick="shareOptionClick"
             android:background="@drawable/pop_option1"
+            android:alpha="0.5"
     >
         <ImageView
                 android:layout_width="match_parent"
